--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "social_profile_field",
-  "version": "0.3.0",
+  "version": "0.1.0",
   "main": "build.js",
   "scripts": {
     "build": "node build.js",
@@ -8,6 +8,8 @@
     "version": "npm run build && git add -A dist"
   },
   "devDependencies": {
-    "ejs": "^2.5.7"
+    "ejs": "^2.5.7",
+    "fs-extra": "^4.0.2",
+    "node-yaml": "^3.1.1"
   }
 }
